src/test/deca/syntax/valid/No_Initialization.deca
// Description:
//    test de la déclaration sans initialisation
// Resultats:
//   
//
// Historique:
//    cree le 22/01/2022


    
{
    float x  ;
    int i ;


}

